# Calculator

./: CMakeLists.txt  Calculator.cpp  Calculator.h  calculator.ui  main.cpp
